crates/data-dict/tests/snapshots/validate_spec__s07_range_type_missing_range.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s07-range-type-missing-range.yaml\")"
---
Error: [S07] A `number(quantity)` column must describe its bounds with `range`.
   ╭─[ spec/s07-range-type-missing-range.yaml:9:15 ]
   │
 6 │   table:
   │ 
 8 │       - name: weight
 9 │         type: number(quantity)
   │               ────────┬───────  
   │                       ╰───────── has type `number(quantity)` but is missing `range`
───╯

Error: [S07] A `date` column must describe its bounds with `range`.
    ╭─[ spec/s07-range-type-missing-range.yaml:11:15 ]
    │
  6 │   table:
    │ 
 10 │       - name: recorded_at
 11 │         type: date
    │               ──┬─  
    │                 ╰─── has type `date` but is missing `range`
────╯
